# TypingTrainer

./: CMakeLists.txt  README.md  main.cpp  typingtrainer.cpp  typingtrainer.h  typingtrainer.ui
